ci3725-Goldberg-Rodriguez/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkLlaveAbre
    TkLlaveCierra

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> TkWith DEC TkBegin INSTR TkEnd
Rule 2     INICIO -> TkBegin INSTR TkEnd
Rule 3     DEC -> DEC TkVar DEC0
Rule 4     DEC -> TkVar IDENT TkDosPuntos TIPO
Rule 5     DEC0 -> IDENT TkDosPuntos TIPO
Rule 6     IDENT -> TkId
Rule 7     IDENT -> ASIG_ID
Rule 8     IDENT -> IDENT TkComa TkId
Rule 9     IDENT -> IDENT TkComa ASIG_ID
Rule 10    TIPO -> TkInt
Rule 11    TIPO -> TkChar
Rule 12    TIPO -> TkBool
Rule 13    TIPO -> TkArray TkCorcheteAbre ARIT TkCorcheteCierra TkOf TIPO
Rule 14    INSTR -> ASIG
Rule 15    INSTR -> I_O
Rule 16    INSTR -> COND
Rule 17    INSTR -> DETER
Rule 18    INSTR -> INDETER
Rule 19    INSTR -> INICIO
Rule 20    INSTR -> PUNTO
Rule 21    INSTR -> ASIG INSTR
Rule 22    INSTR -> I_O INSTR
Rule 23    INSTR -> INICIO INSTR
Rule 24    INSTR -> DETER INSTR
Rule 25    INSTR -> INDETER INSTR
Rule 26    INSTR -> COND INSTR
Rule 27    INSTR -> PUNTO INSTR
Rule 28    PUNTO -> TkId TkPunto ARIT
Rule 29    ASIG -> TkId TkAsignacion EXPR TkPuntoYComa
Rule 30    ASIG_ID -> TkId TkAsignacion EXPR
Rule 31    ARIT -> TkNum
Rule 32    ARIT -> TkParAbre ARIT TkParCierra
Rule 33    ARIT -> ARIT TkSuma ARIT
Rule 34    ARIT -> ARIT TkResta ARIT
Rule 35    ARIT -> ARIT TkMult ARIT
Rule 36    ARIT -> ARIT TkDiv ARIT
Rule 37    ARIT -> ARIT TkMod ARIT
Rule 38    ARIT -> TkValorAscii TkCaracter
Rule 39    ARIT -> TkId
Rule 40    ARIT -> ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
Rule 41    ARIT -> TkResta ARIT
Rule 42    BOOL -> BOOL TkConjuncion BOOL
Rule 43    BOOL -> BOOL TkDisyuncion BOOL
Rule 44    BOOL -> ARIT TkMenor ARIT
Rule 45    BOOL -> ARIT TkMenorIgual ARIT
Rule 46    BOOL -> ARIT TkMayor ARIT
Rule 47    BOOL -> ARIT TkMayorIgual ARIT
Rule 48    BOOL -> ARIT TkIgual ARIT
Rule 49    BOOL -> ARIT TkDesigual ARIT
Rule 50    BOOL -> TkParAbre BOOL TkParCierra
Rule 51    BOOL -> TkFalse
Rule 52    BOOL -> TkTrue
Rule 53    BOOL -> TkNegacion BOOL
Rule 54    BOOL -> TkId
Rule 55    BOOL -> ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
Rule 56    CHAR -> TkCaracter
Rule 57    CHAR -> CHAR TkSiguienteCar
Rule 58    CHAR -> CHAR TkAnteriorCar
Rule 59    CHAR -> TkId
Rule 60    CHAR -> ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
Rule 61    COND -> TkIf BOOL TkHacer INSTR TkEnd
Rule 62    COND -> TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
Rule 63    INDETER -> TkWhile BOOL TkHacer INSTR TkEnd
Rule 64    DETER -> TkFor TkId TkFrom ARIT TkTo ARIT DETER0
Rule 65    DETER0 -> TkStep ARIT TkHacer INSTR TkEnd
Rule 66    DETER0 -> TkHacer INSTR TkEnd
Rule 67    I_O -> TkRead TkId TkPuntoYComa
Rule 68    I_O -> TkPrint EXPR TkPuntoYComa
Rule 69    EXPR -> CHAR
Rule 70    EXPR -> ARIT
Rule 71    EXPR -> ARRAY
Rule 72    EXPR -> BOOL
Rule 73    EXPR -> TkId
Rule 74    ARRAY -> ARRAY TkConcatenacion ARRAY
Rule 75    ARRAY -> TkShift ARRAY
Rule 76    ARRAY -> ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
Rule 77    ARRAY -> TkId
Rule 78    ARRAY -> TkParAbre ARRAY TkParCierra

Terminals, with rules where they appear

TkAnteriorCar        : 58
TkArray              : 13
TkAsignacion         : 29 30
TkBegin              : 1 2
TkBool               : 12
TkCaracter           : 38 56
TkChar               : 11
TkComa               : 8 9
TkConcatenacion      : 74
TkConjuncion         : 42
TkCorcheteAbre       : 13 40 55 60 76
TkCorcheteCierra     : 13 40 55 60 76
TkDesigual           : 49
TkDisyuncion         : 43
TkDiv                : 36
TkDosPuntos          : 4 5
TkEnd                : 1 2 61 62 63 65 66
TkFalse              : 51
TkFor                : 64
TkFrom               : 64
TkHacer              : 61 62 62 63 65 66
TkId                 : 6 8 28 29 30 39 54 59 64 67 73 77
TkIf                 : 61 62
TkIgual              : 48
TkInt                : 10
TkLlaveAbre          : 
TkLlaveCierra        : 
TkMayor              : 46
TkMayorIgual         : 47
TkMenor              : 44
TkMenorIgual         : 45
TkMod                : 37
TkMult               : 35
TkNegacion           : 53
TkNum                : 31
TkOf                 : 13
TkOtherwise          : 62
TkParAbre            : 32 50 78
TkParCierra          : 32 50 78
TkPrint              : 68
TkPunto              : 28
TkPuntoYComa         : 29 67 68
TkRead               : 67
TkResta              : 34 41
TkShift              : 75
TkSiguienteCar       : 57
TkStep               : 65
TkSuma               : 33
TkTo                 : 64
TkTrue               : 52
TkValorAscii         : 38
TkVar                : 3 4
TkWhile              : 63
TkWith               : 1
error                : 

Nonterminals, with rules where they appear

ARIT                 : 13 28 32 33 33 34 34 35 35 36 36 37 37 40 41 44 44 45 45 46 46 47 47 48 48 49 49 55 60 64 64 65 70 76
ARRAY                : 40 55 60 71 74 74 75 76 78
ASIG                 : 14 21
ASIG_ID              : 7 9
BOOL                 : 42 42 43 43 50 53 61 62 63 72
CHAR                 : 57 58 69
COND                 : 16 26
DEC                  : 1 3
DEC0                 : 3
DETER                : 17 24
DETER0               : 64
EXPR                 : 29 30 68
IDENT                : 4 5 8 9
INDETER              : 18 25
INICIO               : 19 23 0
INSTR                : 1 2 21 22 23 24 25 26 27 61 62 62 63 65 66
I_O                  : 15 22
PUNTO                : 20 27
TIPO                 : 4 5 13

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd

    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    INICIO                         shift and go to state 2

state 1

    (1) INICIO -> TkWith . DEC TkBegin INSTR TkEnd
    (3) DEC -> . DEC TkVar DEC0
    (4) DEC -> . TkVar IDENT TkDosPuntos TIPO

    TkVar           shift and go to state 5

    DEC                            shift and go to state 4

state 2

    (0) S' -> INICIO .



state 3

    (2) INICIO -> TkBegin . INSTR TkEnd
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    I_O                            shift and go to state 6
    INSTR                          shift and go to state 7
    PUNTO                          shift and go to state 9
    ASIG                           shift and go to state 18
    DETER                          shift and go to state 17
    INICIO                         shift and go to state 12
    INDETER                        shift and go to state 19
    COND                           shift and go to state 14

state 4

    (1) INICIO -> TkWith DEC . TkBegin INSTR TkEnd
    (3) DEC -> DEC . TkVar DEC0

    TkBegin         shift and go to state 21
    TkVar           shift and go to state 20


state 5

    (4) DEC -> TkVar . IDENT TkDosPuntos TIPO
    (6) IDENT -> . TkId
    (7) IDENT -> . ASIG_ID
    (8) IDENT -> . IDENT TkComa TkId
    (9) IDENT -> . IDENT TkComa ASIG_ID
    (30) ASIG_ID -> . TkId TkAsignacion EXPR

    TkId            shift and go to state 24

    ASIG_ID                        shift and go to state 22
    IDENT                          shift and go to state 23

state 6

    (15) INSTR -> I_O .
    (22) INSTR -> I_O . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 15 (INSTR -> I_O .)
    TkOtherwise     reduce using rule 15 (INSTR -> I_O .)
    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    I_O                            shift and go to state 6
    INSTR                          shift and go to state 25
    PUNTO                          shift and go to state 9
    ASIG                           shift and go to state 18
    DETER                          shift and go to state 17
    INICIO                         shift and go to state 12
    INDETER                        shift and go to state 19
    COND                           shift and go to state 14

state 7

    (2) INICIO -> TkBegin INSTR . TkEnd

    TkEnd           shift and go to state 26


state 8

    (63) INDETER -> TkWhile . BOOL TkHacer INSTR TkEnd
    (42) BOOL -> . BOOL TkConjuncion BOOL
    (43) BOOL -> . BOOL TkDisyuncion BOOL
    (44) BOOL -> . ARIT TkMenor ARIT
    (45) BOOL -> . ARIT TkMenorIgual ARIT
    (46) BOOL -> . ARIT TkMayor ARIT
    (47) BOOL -> . ARIT TkMayorIgual ARIT
    (48) BOOL -> . ARIT TkIgual ARIT
    (49) BOOL -> . ARIT TkDesigual ARIT
    (50) BOOL -> . TkParAbre BOOL TkParCierra
    (51) BOOL -> . TkFalse
    (52) BOOL -> . TkTrue
    (53) BOOL -> . TkNegacion BOOL
    (54) BOOL -> . TkId
    (55) BOOL -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (31) ARIT -> . TkNum
    (32) ARIT -> . TkParAbre ARIT TkParCierra
    (33) ARIT -> . ARIT TkSuma ARIT
    (34) ARIT -> . ARIT TkResta ARIT
    (35) ARIT -> . ARIT TkMult ARIT
    (36) ARIT -> . ARIT TkDiv ARIT
    (37) ARIT -> . ARIT TkMod ARIT
    (38) ARIT -> . TkValorAscii TkCaracter
    (39) ARIT -> . TkId
    (40) ARIT -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (41) ARIT -> . TkResta ARIT
    (74) ARRAY -> . ARRAY TkConcatenacion ARRAY
    (75) ARRAY -> . TkShift ARRAY
    (76) ARRAY -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (77) ARRAY -> . TkId
    (78) ARRAY -> . TkParAbre ARRAY TkParCierra

    TkParAbre       shift and go to state 33
    TkFalse         shift and go to state 27
    TkTrue          shift and go to state 29
    TkNegacion      shift and go to state 31
    TkId            shift and go to state 37
    TkNum           shift and go to state 28
    TkValorAscii    shift and go to state 30
    TkResta         shift and go to state 32
    TkShift         shift and go to state 34

    BOOL                           shift and go to state 36
    ARRAY                          shift and go to state 38
    ARIT                           shift and go to state 35

state 9

    (20) INSTR -> PUNTO .
    (27) INSTR -> PUNTO . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 20 (INSTR -> PUNTO .)
    TkOtherwise     reduce using rule 20 (INSTR -> PUNTO .)
    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    I_O                            shift and go to state 6
    INSTR                          shift and go to state 39
    PUNTO                          shift and go to state 9
    ASIG                           shift and go to state 18
    DETER                          shift and go to state 17
    INICIO                         shift and go to state 12
    INDETER                        shift and go to state 19
    COND                           shift and go to state 14

state 10

    (64) DETER -> TkFor . TkId TkFrom ARIT TkTo ARIT DETER0

    TkId            shift and go to state 40


state 11

    (67) I_O -> TkRead . TkId TkPuntoYComa

    TkId            shift and go to state 41


state 12

    (19) INSTR -> INICIO .
    (23) INSTR -> INICIO . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 19 (INSTR -> INICIO .)
    TkOtherwise     reduce using rule 19 (INSTR -> INICIO .)
    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    I_O                            shift and go to state 6
    INSTR                          shift and go to state 42
    PUNTO                          shift and go to state 9
    ASIG                           shift and go to state 18
    DETER                          shift and go to state 17
    INICIO                         shift and go to state 12
    INDETER                        shift and go to state 19
    COND                           shift and go to state 14

state 13

    (68) I_O -> TkPrint . EXPR TkPuntoYComa
    (69) EXPR -> . CHAR
    (70) EXPR -> . ARIT
    (71) EXPR -> . ARRAY
    (72) EXPR -> . BOOL
    (73) EXPR -> . TkId
    (56) CHAR -> . TkCaracter
    (57) CHAR -> . CHAR TkSiguienteCar
    (58) CHAR -> . CHAR TkAnteriorCar
    (59) CHAR -> . TkId
    (60) CHAR -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (31) ARIT -> . TkNum
    (32) ARIT -> . TkParAbre ARIT TkParCierra
    (33) ARIT -> . ARIT TkSuma ARIT
    (34) ARIT -> . ARIT TkResta ARIT
    (35) ARIT -> . ARIT TkMult ARIT
    (36) ARIT -> . ARIT TkDiv ARIT
    (37) ARIT -> . ARIT TkMod ARIT
    (38) ARIT -> . TkValorAscii TkCaracter
    (39) ARIT -> . TkId
    (40) ARIT -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (41) ARIT -> . TkResta ARIT
    (74) ARRAY -> . ARRAY TkConcatenacion ARRAY
    (75) ARRAY -> . TkShift ARRAY
    (76) ARRAY -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (77) ARRAY -> . TkId
    (78) ARRAY -> . TkParAbre ARRAY TkParCierra
    (42) BOOL -> . BOOL TkConjuncion BOOL
    (43) BOOL -> . BOOL TkDisyuncion BOOL
    (44) BOOL -> . ARIT TkMenor ARIT
    (45) BOOL -> . ARIT TkMenorIgual ARIT
    (46) BOOL -> . ARIT TkMayor ARIT
    (47) BOOL -> . ARIT TkMayorIgual ARIT
    (48) BOOL -> . ARIT TkIgual ARIT
    (49) BOOL -> . ARIT TkDesigual ARIT
    (50) BOOL -> . TkParAbre BOOL TkParCierra
    (51) BOOL -> . TkFalse
    (52) BOOL -> . TkTrue
    (53) BOOL -> . TkNegacion BOOL
    (54) BOOL -> . TkId
    (55) BOOL -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra

    TkId            shift and go to state 48
    TkCaracter      shift and go to state 43
    TkNum           shift and go to state 28
    TkParAbre       shift and go to state 45
    TkValorAscii    shift and go to state 30
    TkResta         shift and go to state 32
    TkShift         shift and go to state 34
    TkFalse         shift and go to state 27
    TkTrue          shift and go to state 29
    TkNegacion      shift and go to state 31

    BOOL                           shift and go to state 47
    CHAR                           shift and go to state 49
    EXPR                           shift and go to state 50
    ARIT                           shift and go to state 46
    ARRAY                          shift and go to state 44

state 14

    (16) INSTR -> COND .
    (26) INSTR -> COND . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 16 (INSTR -> COND .)
    TkOtherwise     reduce using rule 16 (INSTR -> COND .)
    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    I_O                            shift and go to state 6
    INSTR                          shift and go to state 51
    PUNTO                          shift and go to state 9
    ASIG                           shift and go to state 18
    DETER                          shift and go to state 17
    INICIO                         shift and go to state 12
    INDETER                        shift and go to state 19
    COND                           shift and go to state 14

state 15

    (29) ASIG -> TkId . TkAsignacion EXPR TkPuntoYComa
    (28) PUNTO -> TkId . TkPunto ARIT

    TkAsignacion    shift and go to state 52
    TkPunto         shift and go to state 53


state 16

    (61) COND -> TkIf . BOOL TkHacer INSTR TkEnd
    (62) COND -> TkIf . BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (42) BOOL -> . BOOL TkConjuncion BOOL
    (43) BOOL -> . BOOL TkDisyuncion BOOL
    (44) BOOL -> . ARIT TkMenor ARIT
    (45) BOOL -> . ARIT TkMenorIgual ARIT
    (46) BOOL -> . ARIT TkMayor ARIT
    (47) BOOL -> . ARIT TkMayorIgual ARIT
    (48) BOOL -> . ARIT TkIgual ARIT
    (49) BOOL -> . ARIT TkDesigual ARIT
    (50) BOOL -> . TkParAbre BOOL TkParCierra
    (51) BOOL -> . TkFalse
    (52) BOOL -> . TkTrue
    (53) BOOL -> . TkNegacion BOOL
    (54) BOOL -> . TkId
    (55) BOOL -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (31) ARIT -> . TkNum
    (32) ARIT -> . TkParAbre ARIT TkParCierra
    (33) ARIT -> . ARIT TkSuma ARIT
    (34) ARIT -> . ARIT TkResta ARIT
    (35) ARIT -> . ARIT TkMult ARIT
    (36) ARIT -> . ARIT TkDiv ARIT
    (37) ARIT -> . ARIT TkMod ARIT
    (38) ARIT -> . TkValorAscii TkCaracter
    (39) ARIT -> . TkId
    (40) ARIT -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (41) ARIT -> . TkResta ARIT
    (74) ARRAY -> . ARRAY TkConcatenacion ARRAY
    (75) ARRAY -> . TkShift ARRAY
    (76) ARRAY -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (77) ARRAY -> . TkId
    (78) ARRAY -> . TkParAbre ARRAY TkParCierra

    TkParAbre       shift and go to state 33
    TkFalse         shift and go to state 27
    TkTrue          shift and go to state 29
    TkNegacion      shift and go to state 31
    TkId            shift and go to state 37
    TkNum           shift and go to state 28
    TkValorAscii    shift and go to state 30
    TkResta         shift and go to state 32
    TkShift         shift and go to state 34

    BOOL                           shift and go to state 54
    ARRAY                          shift and go to state 38
    ARIT                           shift and go to state 35

state 17

    (17) INSTR -> DETER .
    (24) INSTR -> DETER . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 17 (INSTR -> DETER .)
    TkOtherwise     reduce using rule 17 (INSTR -> DETER .)
    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    I_O                            shift and go to state 6
    INSTR                          shift and go to state 55
    PUNTO                          shift and go to state 9
    ASIG                           shift and go to state 18
    DETER                          shift and go to state 17
    INICIO                         shift and go to state 12
    INDETER                        shift and go to state 19
    COND                           shift and go to state 14

state 18

    (14) INSTR -> ASIG .
    (21) INSTR -> ASIG . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 14 (INSTR -> ASIG .)
    TkOtherwise     reduce using rule 14 (INSTR -> ASIG .)
    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    I_O                            shift and go to state 6
    INSTR                          shift and go to state 56
    PUNTO                          shift and go to state 9
    ASIG                           shift and go to state 18
    DETER                          shift and go to state 17
    INICIO                         shift and go to state 12
    INDETER                        shift and go to state 19
    COND                           shift and go to state 14

state 19

    (18) INSTR -> INDETER .
    (25) INSTR -> INDETER . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (67) I_O -> . TkRead TkId TkPuntoYComa
    (68) I_O -> . TkPrint EXPR TkPuntoYComa
    (61) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (62) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (64) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (63) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 18 (INSTR -> INDETER .)
    TkOtherwise     reduce using rule 18 (INSTR -> INDETER .)
    TkId            shift and go to state 15
    TkRead          shift and go to state 11
    TkPrint         shift and go to state 13
    TkIf            shift and go to state 16
    TkFor           shift and go to state 10
    TkWhile         shift and go to state 8
    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3
